--- a/XdHtml/cchess/xdBoard.html
+++ b/XdHtml/cchess/xdBoard.html
@@ -13,7 +13,7 @@
   </head>
  <body>
     <div id = "xdMainDiv" style="border:1px green solid;">
-	<a href="?xd=0">V0.0.114</a>
+	<a href="?xd=0">V0.0.125</a>
 	<a href="../index.html">[..]</a>
 	<a href="./index.html">[chess]</a>
 	<a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/cchess/xdBoard.html">github*</a>
@@ -143,7 +143,7 @@ function moveList_change() {
   board.flushBoard();
 }
 function _CtrlClass(){
-	var v = "v0.0.116";
+	var v = "v0.0.121";
 	var _myPuJSWrap = null;
 	var _myMsgWrap = null;
 	var _myBoardWrap = null;
@@ -213,12 +213,29 @@ function _CtrlClass(){
 		selMoveList.options.length = board.pos.mvList.length;
 		selMoveList.selectedIndex = selMoveList.options.length - 1;
 	};
-	this.blrA0A1 = function(b,d){  
-                go(_cchessBoard,'a','0','a','1');
+	this.blrCreatePu = function(b,d){  
+		 var x = document.getElementById("id_select_MoveList");
+		 var txt = "";
+		 var i;
+		 for (i = 1; i < x.length; i++) {
+		    var a = x.options[i].text;
+			var b = a.split(".");
+			var c = a;
+			if(b.length>1) c = b[1];
+			var s = c.replace(" ","");;
+			for(var j=0;j<10;j++){ 
+				s = s.replace(" ","");
+			} 
+
+			txt = txt + s + "+";
+		 } 
+		 var ta = blo0.blTextarea(d,"id_ta_createPu","abc",blGrey[1]);
+		 ta.value = 'var s = "' + txt + '";';
+		 ta.style.width = "100%";
 	};
 	this.blrLoadPuJS = function(b,d){  
 		if(_myPuJSWrap==null){
-			_myPuJSWrap = blo0.blMDiv(document.body,"id_div__myPuJSWrap","_myPuJSWrap:",810,330,400,200,"blue");  
+			_myPuJSWrap = blo0.blMDiv(document.body,"id_div__myPuJSWrap","_myPuJSWrap:",810,130,400,200,"blue");  
 			var ld = blo0.blDiv(_myPuJSWrap,"id_div_pu_list","ld",blGrey[5]);
 			ld.board = _cchessBoard;
 			blo0.blScript("id_script_pu_list","pu/puList.js");
