--- a/XdHtml/cchess/xdBoard.html
+++ b/XdHtml/cchess/xdBoard.html
@@ -13,7 +13,7 @@
   </head>
  <body>
     <div id = "xdMainDiv" style="border:1px green solid;">
-	<a href="?xd=0">V0.0.125</a>
+	<a href="?xd=0">V0.0.126</a>
 	<a href="../index.html">[..]</a>
 	<a href="./index.html">[chess]</a>
 	<a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/cchess/xdBoard.html">github*</a>
@@ -143,8 +143,9 @@ function moveList_change() {
   board.flushBoard();
 }
 function _CtrlClass(){
-	var v = "v0.0.121";
+	var v = "v0.0.122";
 	var _myPuJSWrap = null;
+	var _xdPuJSWrap = null;
 	var _myMsgWrap = null;
 	var _myBoardWrap = null;
 	var divMsg = null;
@@ -241,6 +242,15 @@ function _CtrlClass(){
 			blo0.blScript("id_script_pu_list","pu/puList.js");
 		}
 		_on_off_div(b,_myPuJSWrap);
+	};
+	this.blrLoadXdPu = function(b,d){  
+		if(_xdPuJSWrap==null){
+			_xdPuJSWrap = blo0.blMDiv(document.body,"id_div__XdPuWrap","_myPuJSWrap:",810,130,400,200,"green");  
+			var ld = blo0.blDiv(_xdPuJSWrap,"id_div_xd_pu_list","ld",blGrey[5]);
+			ld.board = _cchessBoard;
+			blo0.blScript("id_script_xd_pu_list","pu/xdPuList.js");
+		}
+		_on_off_div(b,_xdPuJSWrap);
 	};
 	this.blhRun = function(){
 		var d = blo0.blMDiv(document.body,"id_div__CtrlClass","_CtrlClass:",850,50,400,200,"purple");  
