--- a/XdHtml/cchess/xqbase/getFromXQBASE.html
+++ b/XdHtml/cchess/xqbase/getFromXQBASE.html
@@ -2,10 +2,14 @@
 <script src="../../blclass.js"  type="text/javascript" ></script> 
 </HEAD><BODY>
 <div id="pageLevel" style="display:none">2</div>
-<div id = "idDivBlV" style="display:none;">v0.1.21</div>
+<div id = "idDivBlV" style="display:none;"><a href="?" >v0.1.52</a>
+<a href="https://github.com/littleflute/vc6/edit/master/XdHtml/cchess/xqbase/getFromXQBASE.html" target="_blank" >github*</a>
+</div>
 <div id="blPageV"></div><div id="xddbg"></div>
 <script type="text/javascript" src="../../xd.js"></script> 
 <script>
+var g_page_2_save_HTML = "";
+
 function get_file_name(a,b){
 	var r = "";
 	var p = "C:\\Users\\13699\\xd1\\baidu\\VC6_EN\\VC6_EN\\VC6EN\\MyProjects\\XdHtml\\cchess\\xqbase\\";
@@ -13,9 +17,13 @@ function get_file_name(a,b){
 	return r;
 }
 
+function get_file_length(a,b){ 	 
+	var n = g_page_2_save_HTML.length;
+	return "" + n;
+}
+
 function create_page(titleTxt,bodyHTML){
-	var r = "";
-	r = blo0.blCreatePage("xdtest1",divChess.innerHTML);
+	var r = g_page_2_save_HTML; 
 	return r;
 }
 
@@ -23,6 +31,13 @@ function show_msg(msgTxt1,msgTxt2){
 	divMsg.innerHTML = msgTxt1;  
 	btn3_Next.click();
 }
+
+function _create_page_2_save(title,bodyHTML){  
+	var r = "";
+	r = blo0.blCreatePage(title,bodyHTML);
+	g_page_2_save_HTML = r;
+}
+
 
 
 function _ajaxWorkClass()
@@ -32,8 +47,14 @@ function _ajaxWorkClass()
 		var a = txt.split("gameid%3D");
 		var b = a[1].split("&am");
 		var r = b[0];
-		var d = blo0.blDiv(oBoss,oBoss.id+"_getGameId","_getGameId","gray");
+		var href = "getFromXQBASE.html";
+		blo0.blLink(oBoss,"getFromXQBASE","getFromXQBASE.html",href,"skyblue");  
+
+		var d = blo0.blDiv(oBoss,oBoss.id+"_getGameId","_getGameId","gray"); 
 		d.innerHTML = r;
+		
+
+		return r;
 	};
 	var _getChinesPu = function(oBoss,txt){
 		var r = "";
@@ -56,9 +77,10 @@ function _ajaxWorkClass()
 		d.innerHTML = r;
 	};
 	var _myJob = function(txt){
-		_getGameId(divChess,txt);
+		var id = _getGameId(divChess,txt);
 		_getBoard(divChess,txt);
 		_getChinesPu(divChess,txt);
+		_create_page_2_save("game"+id,divChess.innerHTML);
 	};
 	this._2do = function(txt)
 	{
