--- a/XdHtml/w3css/tryw3css_templates_blog.html
+++ b/XdHtml/w3css/tryw3css_templates_blog.html
@@ -16,9 +16,11 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>MY BLOG v0.0.2</b></h1>
+  <h1><b>MY BLOG v0.0.3</b></h1>
   <p>Welcome to the blog of <span class="w3-tag">unknown</span>
-  <a href="../index.html" >[..]</a></p>
+  <a href="../index.html" >[..]</a>
+  <a href="https://github.com/littleflute/vc6/edit/master/XdHtml/w3css/tryw3css_templates_blog.html" target="_blank">github*</a>
+  </p>
 </header>
 
 <!-- Grid -->
