--- a/XdHtml/w3css/tryw3css_templates_blog.html
+++ b/XdHtml/w3css/tryw3css_templates_blog.html
@@ -4,7 +4,7 @@
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> 
+<link rel="stylesheet" href="4/w3.css"> 
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 </style>
@@ -16,10 +16,11 @@ and is wrapped around the whole page content, except for the footer in this exam
 
 <!-- Header -->
 <header class="w3-container w3-center w3-padding-32"> 
-  <h1><b>MY BLOG v0.0.3</b></h1>
+  <h1><b>MY BLOG</b></h1>
   <p>Welcome to the blog of <span class="w3-tag">unknown</span>
-  <a href="../index.html" >[..]</a>
-  <a href="https://github.com/littleflute/vc6/edit/master/XdHtml/w3css/tryw3css_templates_blog.html" target="_blank">github*</a>
+  <a href="?" class="w3-tag w3-yellow">v0.0.9</a>
+  <a href="../index.html" class="w3-tag w3-blue" >[..]</a>
+  <a href="https://github.com/littleflute/vc6/edit/master/XdHtml/w3css/tryw3css_templates_blog.html" target="_blank" class="w3-tag w3-green" >github*</a>
   </p>
 </header>
 
