--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -31,7 +31,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.52</a>
+    <li><a href="index.html">v0.0.54</a>
       <ul>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
@@ -49,6 +49,7 @@ a:hover {color:#C60;text-decoration: underline;}
             <ul> 
               <li><a href="w3css/tryw3css_templates_blog.html">templates_blog</a></li>   
               <li><a href="w3css/table1.html">table1</a></li>         
+              <li><a href="w3css/accordion_sidebar.html">accordion_sidebar</a></li>    
             </ul>
         </li> 
         <li><a>-----</a></li>
