--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -31,9 +31,9 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.56</a>
+    <li><a href="index.html">v0.0.58</a>
       <ul>
-        <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a></li>
+        <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
       </ul>
     </li>
@@ -50,6 +50,7 @@ a:hover {color:#C60;text-decoration: underline;}
               <li><a href="w3css/tryw3css_templates_blog.html">templates_blog</a></li>   
               <li><a href="w3css/table1.html">table1</a></li>         
               <li><a href="w3css/accordion_sidebar.html">accordion_sidebar</a></li>    
+              <li><a href="w3css/test.html">test</a></li>    
             </ul>
         </li> 
         <li><a href="?">howto>></a>
