--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -31,7 +31,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.58</a>
+    <li><a href="index.html">v0.0.60</a>
       <ul>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
@@ -133,10 +133,11 @@ a:hover {color:#C60;text-decoration: underline;}
       </ul>
     </li>
     
-    <li id="btfMenue"><a href="http://www.beautifullover.org">beautifullover.org</a>    
+    <li id="btfMenue"><a>beautifullover.org</a>    
           <ul>
-            <li><a target="_blank"  href="http://git.oschina.net/littleflute/BeautifulLover">项目主页</a></li>  
-            <li><a target="_blank"  href="http://littleflute.oschina.io/beautifullover">Pages主页</a></li>  
+            <li><a href="https://littleflute.github.io/beautifullover.org/">github</a></li>  
+            <li><a target="_blank"  href="http://git.oschina.net/littleflute/BeautifulLover">oschina Prj Home</a></li>  
+            <li><a target="_blank"  href="http://littleflute.oschina.io/beautifullover">oschina Pages Home</a></li>  
           </ul>        
     </li>
  </ul>     
