--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -31,13 +31,13 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.60</a>
+    <li><a href="index.html">v0.0.62</a>
       <ul>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
       </ul>
     </li>
-    <li><a href="plx/index.html">plx</a>
+    <li><a>plx</a>
       <ul>
         <li><a href="#" id="id_plx_design">design</a></li>
 	  </ul>
@@ -45,7 +45,7 @@ a:hover {color:#C60;text-decoration: underline;}
     <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">projects</a>
       <ul>
         <li><a href="cchess/index.html">cchess</a></li> 
-        <li><a href="?">w3.css>></a>
+        <li><a>w3.css>></a>
             <ul> 
               <li><a href="w3css/tryw3css_templates_blog.html">templates_blog</a></li>   
               <li><a href="w3css/table1.html">table1</a></li>         
@@ -53,7 +53,7 @@ a:hover {color:#C60;text-decoration: underline;}
               <li><a href="w3css/test.html">test</a></li>    
             </ul>
         </li> 
-        <li><a href="?">howto>></a>
+        <li><a>howto>></a>
             <ul> 
               <li><a href="howto/js_topnav.html">how_js_topnav</a></li>     
             </ul>
