--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>   
 <META HTTP-EQUIV="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>index.html</title>
 <style>
 html,body,dl,dt,dd,ul,li,h1,h2,P,a,img {margin:0;padding:0;border:none;list-style:none;}
@@ -31,7 +32,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.62</a>
+    <li><a href="index.html">v0.0.64</a>
       <ul>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
@@ -42,7 +43,7 @@ a:hover {color:#C60;text-decoration: underline;}
         <li><a href="#" id="id_plx_design">design</a></li>
 	  </ul>
 	</li>
-    <li><a target="_blank" href="http://git.oschina.net/hjhy/hjhy">projects</a>
+    <li><a>projects</a>
       <ul>
         <li><a href="cchess/index.html">cchess</a></li> 
         <li><a>w3.css>></a>
