--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -24,6 +24,7 @@ a:hover {color:#C60;text-decoration: underline;}
 .menu ul li ul li ul {margin-top:-20px;}
 #btfMenue{ 
     background:#00a;
+	cursor:default;
 }
 .mainfoldericon{border:1px green solid;}
 .subfoldericon{border:1px blue solid;}
@@ -32,7 +33,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.64</a>
+    <li><a href="index.html">v0.0.65</a>
       <ul>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
