--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -11,8 +11,8 @@ body {font: 12px;color:#333;background:#001111 repeat-y center 0;}
 a {color:#666;text-decoration: none;}
 a:hover {color:#C60;text-decoration: underline;}
 
-.head {width:960px; overflow:hidden; margin:auto;}
-.menu {width:960px;padding:6px 0 5px 0;background:#183 no-repeat 0 0; margin:auto; display:table;}
+.head {width:100%; overflow:hidden; margin:auto;}
+.menu {width:100%;padding:6px 0 5px 0;background:#183 no-repeat 0 0; margin:auto; display:table;}
 .menu ul {padding-left:5px;}
 .menu ul li {font-size:13px;font-weight:bold;float:left;position: relative;margin-right:3px;}
 .menu ul li a {color:#FFF;display:block;padding: 7px 12px 5px 12px;} 
@@ -33,7 +33,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.65</a>
+    <li><a href="index.html">v0.0.66</a>
       <ul>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
         <li><a href="index1.html">index1.html</a></li>
