--- a/XdHtml/index.html
+++ b/XdHtml/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {margin:0;}
 
@@ -60,7 +61,7 @@ body {margin:0;}
 <body>
 
 <div class="topnav" id="myTopnav">
-  <a href="?v=" class="active">v0.0.63</a> 
+  <a href="?v=" class="active">v0.0.64</a> 
   <a href="index2.html">index2</a>
   <a href="index1.html">index1</a>
   <a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index.html">edit in github</a>
