--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -33,7 +33,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="index.html">v0.0.70</a>
+    <li><a href="?v=">v0.0.72</a>
       <ul>
 		<li><a>plx</a>
 			<ul>
@@ -41,7 +41,8 @@ a:hover {color:#C60;text-decoration: underline;}
 			</ul>
 		</li>
         <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
-        <li><a href="index1.html">index1.html</a></li>
+        <li><a href="index.html">index.html</a></li>
+		<li><a href="index1.html">index1.html</a></li>
       </ul>
     </li>
     
