--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -33,17 +33,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="?v=">v0.0.72</a>
-      <ul>
-		<li><a>plx</a>
-			<ul>
-			<li><a href="#" id="id_plx_design">design</a></li>
-			</ul>
-		</li>
-        <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
-        <li><a href="index.html">index.html</a></li>
-		<li><a href="index1.html">index1.html</a></li>
-      </ul>
+    <li><a href="?v=">v0.0.75</a>
     </li>
     
     <li><a>projects</a>
@@ -137,13 +127,23 @@ a:hover {color:#C60;text-decoration: underline;}
       </ul>
     </li>
     
-    <li id="btfMenue"><a>beautifullover.org</a>    
+    <li id="btfMenue"><a>beautifullover.org</a> 
+      <ul>
+		<li><a>plx</a>
+			<ul>
+			<li><a href="#" id="id_plx_design">design</a></li>
+			</ul>
+		</li>
+        <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
+        <li><a href="index.html">index.html</a></li>
+		<li><a href="index1.html">index1.html</a></li> 
+		<li><a>prj</a>
           <ul>
             <li><a href="https://littleflute.github.io/beautifullover.org/">github</a></li>  
             <li><a target="_blank"  href="http://git.oschina.net/littleflute/BeautifulLover">oschina Prj Home</a></li>  
             <li><a target="_blank"  href="http://littleflute.oschina.io/beautifullover">oschina Pages Home</a></li>  
           </ul>        
-    </li>
+		</li>
  </ul>     
  </div>
  
