--- a/XdHtml/index2.html
+++ b/XdHtml/index2.html
@@ -33,7 +33,7 @@ a:hover {color:#C60;text-decoration: underline;}
 <body>     
 <div class="menu">
   <ul id=treemenu1> 
-    <li><a href="?v=">v0.0.75</a>
+    <li><a href="?v=">v0.0.77</a>
     </li>
     
     <li><a>projects</a>
@@ -134,9 +134,16 @@ a:hover {color:#C60;text-decoration: underline;}
 			<li><a href="#" id="id_plx_design">design</a></li>
 			</ul>
 		</li>
-        <li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
-        <li><a href="index.html">index.html</a></li>
-		<li><a href="index1.html">index1.html</a></li> 
+		<li><a>this Page-></a>
+			<ul>
+				<li><a target = "_blank" href="https://github.com/littleflute/vc6/edit/master/XdHtml/index2.html">edit in github</a></li>
+				<li><a href="https://littleflute.github.io/vc6/XdHtml/index2.html">show me in github</a></li>
+				<li><a href="index2.html">index2.html</a></li> 
+				<li><a href="index1.html">index1.html</a></li> 
+				<li><a href="file:///C:/Users/13699/xd1/baidu/VC6_EN/VC6_EN/VC6EN/MyProjects/XdHtml/index2.html">show me in PC</a></li>
+				
+		</ul>
+		</li>
 		<li><a>prj</a>
           <ul>
             <li><a href="https://littleflute.github.io/beautifullover.org/">github</a></li>  
