--- a/XdHtml/kLines.html
+++ b/XdHtml/kLines.html
@@ -57,7 +57,7 @@ function _blKinesClass(){
 	var _divDays = null;
 	var _jgY		= null;
 	var _me			= this;
-	this.classV		= "v0.0.121"; 
+	this.classV		= "v0.0.124"; 
 	
 	this.blrYear	= function(b,d){ 
 		if(_yearObj==null){ 
@@ -83,6 +83,11 @@ function _blKinesClass(){
 		var s = "";
 		s += "<a target='_blank' href='https://github.com/littleflute/vc6/edit/master/XdHtml/kLines.html'"
 		s += " style='color:gold;'";
+		s +=">";
+		s += "upate";
+		s += "</a>";
+		s += "<a href='https://littleflute.github.io/xau/'"
+		s += " style='color:blue;'";
 		s +=">";
 		s += "upate";
 		s += "</a>";
