--- a/XdHtml/kLines.html
+++ b/XdHtml/kLines.html
@@ -57,7 +57,7 @@ function _blKinesClass(){
 	var _divDays = null;
 	var _jgY		= null;
 	var _me			= this;
-	this.classV		= "v0.0.124"; 
+	this.classV		= "v0.0.132"; 
 	
 	this.blrYear	= function(b,d){ 
 		if(_yearObj==null){ 
@@ -87,9 +87,15 @@ function _blKinesClass(){
 		s += "upate";
 		s += "</a>";
 		s += "<a href='https://littleflute.github.io/xau/'"
-		s += " style='color:blue;'";
+		s += " style='color:skyblue;'";
 		s +=">";
 		s += "upate";
+		s += "</a>";
+		s += "<a href='xau/devIndex.html'";
+		// <xau/devIndex.html>
+		s += " style='color:purple;'";
+		s +=">";
+		s += "devIndex.html";
 		s += "</a>";
 		d.innerHTML = s;
 
