--- a/XdHtml/kLines.html
+++ b/XdHtml/kLines.html
@@ -57,7 +57,7 @@ function _blKinesClass(){
 	var _divDays = null;
 	var _jgY		= null;
 	var _me			= this;
-	this.classV		= "v0.0.132"; 
+	this.classV		= "v0.0.133"; 
 	
 	this.blrYear	= function(b,d){ 
 		if(_yearObj==null){ 
@@ -89,11 +89,11 @@ function _blKinesClass(){
 		s += "<a href='https://littleflute.github.io/xau/'"
 		s += " style='color:skyblue;'";
 		s +=">";
-		s += "upate";
+		s += "xau";
 		s += "</a>";
 		s += "<a href='xau/devIndex.html'";
 		// <xau/devIndex.html>
-		s += " style='color:purple;'";
+		s += " style='color:gray;'";
 		s +=">";
 		s += "devIndex.html";
 		s += "</a>";
